F&GDEV/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountNameForm__c</fullName>
        <formula>Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Account_Detail__c</fullName>
        <label>Additional Account Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Class__c</fullName>
        <label>Agent Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>MYGA only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annuity_Power_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annuity Power Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annuity_Region__c</fullName>
        <label>Annuity Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssociatedMastersHistory__c</fullName>
        <label>Association History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssociatedMastersText__c</fullName>
        <label>Associated Masters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Restrictions__c</fullName>
        <label>Communication Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactsLastReviewed__c</fullName>
        <label>Contacts Last Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstContracted__c</fullName>
        <label>First Contracted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstPolicyIssued__c</fullName>
        <label>First Policy Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Sync_From_HubSpot__c</fullName>
        <description>This is for HubSpot use only</description>
        <label>Sync From HubSpot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last12FixedAnnuity__c</fullName>
        <label>Fixed Annuity (L12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last12IndexedAnnuity__c</fullName>
        <label>Indexed Annuity (L12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last12IndexedUL__c</fullName>
        <label>Indexed UL (L12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last12IssuedPoliciesAnnuity__c</fullName>
        <label>Annuity Issued Count (L12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12IssuedPoliciesLife__c</fullName>
        <label>Life Issued Count (L12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12IssuedWrittenPoliciesAnnuity__c</fullName>
        <label>Annuity Issued Count as WA (L12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12IssuedWrittenPoliciesLife__c</fullName>
        <label>Life Issued Count as WA (L12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12OtherLife__c</fullName>
        <label>Other Life (L12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last12SPIA__c</fullName>
        <label>SPIA (L12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last12SPIUL__c</fullName>
        <label>SPIUL (L12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last12TAPPoliciesAnnuity__c</fullName>
        <label>Annuity TAP Count (L12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12TAPPoliciesLife__c</fullName>
        <label>Life TAP Count (L12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12TAPWrittenPoliciesAnnuity__c</fullName>
        <label>Annuity TAP Count as WA (L12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12TAPWrittenPoliciesLife__c</fullName>
        <label>Life TAP Count as WA (L12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last12TotalAnnualizedLife__c</fullName>
        <label>Total Annualized Life (L12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last12TotalAnnuity__c</fullName>
        <label>Total Annuity (L12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last12TotalLife__c</fullName>
        <label>Total Life (L12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3FixedAnnuity__c</fullName>
        <label>Fixed Annuity (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3IndexedAnnuity__c</fullName>
        <label>Indexed Annuity (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3IndexedUL__c</fullName>
        <label>Indexed UL (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3IssuedPoliciesAnnuity__c</fullName>
        <label>Annuity Issued Count (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3IssuedPoliciesLife__c</fullName>
        <label>Life Issued Count (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3IssuedWrittenPoliciesAnnuity__c</fullName>
        <label>Annuity Issued Count as WA (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3IssuedWrittenPoliciesLife__c</fullName>
        <label>Life Issued Count as WA (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3OtherLife__c</fullName>
        <label>Other Life (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3SPIA__c</fullName>
        <label>SPIA (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3SPIUL__c</fullName>
        <label>SPIUL (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3TAPPoliciesAnnuity__c</fullName>
        <label>Annuity TAP Count (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3TAPPoliciesLife__c</fullName>
        <label>Life TAP Count (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3TAPWrittenPoliciesAnnuity__c</fullName>
        <label>Annuity TAP Count as WA (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3TAPWrittenPoliciesLife__c</fullName>
        <label>Life TAP Count as WA (L3)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last3TotalAnnualizedLife__c</fullName>
        <label>Total Annualized Life (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3TotalAnnuity__c</fullName>
        <label>Total Annuity (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last3TotalLife__c</fullName>
        <label>Total Life (L3)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastPolicyIssued__c</fullName>
        <label>Last Policy Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LicenseStatesText__c</fullName>
        <label>Licensed States</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Plan_of_Action__c</fullName>
        <label>Life Plan of Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Life_Power_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life Power Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life_Region__c</fullName>
        <label>Life Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LinkedIn User</description>
        <inlineHelpText>Check to indicate this is a LinkedIn user</inlineHelpText>
        <label>LinkedIn User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>National_Account_VP__c</fullName>
        <description>Assigned National Account VP</description>
        <inlineHelpText>Select which VP is assigned to this account.</inlineHelpText>
        <label>National Account VP</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Christenson</fullName>
                </value>
                <value>
                    <fullName>Grines</fullName>
                </value>
                <value>
                    <fullName>Parker</fullName>
                </value>
                <value>
                    <fullName>Snyder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Accounts_Manager__c</fullName>
        <label>National Accounts Manager</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kent</fullName>
                </value>
                <value>
                    <fullName>Reid</fullName>
                </value>
                <value>
                    <fullName>Smith</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Niche_Markets__c</fullName>
        <label>Niche Markets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OmacAgtID__c</fullName>
        <externalId>true</externalId>
        <label>OMFN Account ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAIRPoints__c</fullName>
        <label>Power Producer Points</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAIRProductionPercentQualified__c</fullName>
        <label>Power Producer % Qualified</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PAIRProduction__c</fullName>
        <label>Power Producer Production</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAIRProjectedCredits__c</fullName>
        <label>Power Producer Projected Credits</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAIRProjectedProductionPercentQualified__c</fullName>
        <label>Power Producer Projected % Qualified</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PAIRProjectedProduction__c</fullName>
        <label>Power Producer Projected Production</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAIRRank__c</fullName>
        <label>Power Producer Rank</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAIRStatus__c</fullName>
        <label>Power Producer Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PST_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PST Representative</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>PST</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power_Producer_Years_Qualified__c</fullName>
        <inlineHelpText>What are the years in which this person was qualified to be a power producer?</inlineHelpText>
        <label>Power Producer Years Qualified</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Premier_Service_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premier Service Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior12FixedAnnuity__c</fullName>
        <label>Fixed Annuity (P12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior12IndexedAnnuity__c</fullName>
        <label>Indexed Annuity (P12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior12IndexedUL__c</fullName>
        <label>IndexedUL (P12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior12IssuedPoliciesAnnuity__c</fullName>
        <label>Annuity Issued Count (P12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior12IssuedPoliciesLife__c</fullName>
        <label>Life Issued Count (P12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior12IssuedWrittenPoliciesAnnuity__c</fullName>
        <label>Annuity Issued Count as WA (P12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior12IssuedWrittenPoliciesLife__c</fullName>
        <label>Life Issued Count as WA (P12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior12OtherLife__c</fullName>
        <label>Other Life (P12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior12SPIA__c</fullName>
        <label>SPIA (P12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior12SPIUL__c</fullName>
        <label>SPIUL (P12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior12TAPPoliciesAnnuity__c</fullName>
        <label>Annuity TAP Count (P12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior12TAPPoliciesLife__c</fullName>
        <label>Life TAP Count (P12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior12TAPWrittenPoliciesAnnuity__c</fullName>
        <label>Annuity TAP Count as WA (P12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior12TAPWrittenPoliciesLife__c</fullName>
        <label>Life TAP Count as WA (P12)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior12TotalAnnualizedLife__c</fullName>
        <label>Total Annualized Life (P12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior12TotalAnnuity__c</fullName>
        <label>Total Annuity (P12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior12TotalLife__c</fullName>
        <label>Total Life (P12)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearAnnuity__c</fullName>
        <label>Prior Year Annuity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearIssuedPoliciesAnnuity__c</fullName>
        <label>Prior Year Annuity Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearIssuedPoliciesLife__c</fullName>
        <label>Prior Year Life Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearIssuedWrittenPoliciesAnnuity__c</fullName>
        <label>Prior Year Annuity Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearIssuedWrittenPoliciesLife__c</fullName>
        <label>Prior Year Life Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearLife__c</fullName>
        <label>Prior Year Life</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearTAPPoliciesAnnuity__c</fullName>
        <label>Prior Year Annuity TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearTAPPoliciesLife__c</fullName>
        <label>Prior Year Life TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearTAPWrittenPoliciesAnnuity__c</fullName>
        <label>Prior Year Annuity TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorYearTAPWrittenPoliciesLife__c</fullName>
        <label>Prior Year Life TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectedAnnuity__c</fullName>
        <label>Projected Annuity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedLife__c</fullName>
        <label>Projected Life</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Road_Show_Last_Attended__c</fullName>
        <label>Road Show Last Attended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Analyst__c</fullName>
        <inlineHelpText>Select which Sales Analyst is assigned to this account.</inlineHelpText>
        <label>Internal Wholesaler</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carlson</fullName>
                </value>
                <value>
                    <fullName>Christenson</fullName>
                </value>
                <value>
                    <fullName>Cox</fullName>
                </value>
                <value>
                    <fullName>Engel</fullName>
                </value>
                <value>
                    <fullName>Greiner</fullName>
                </value>
                <value>
                    <fullName>Scanlon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Licenses__c</fullName>
        <label>Security Licenses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RIA</fullName>
                </value>
                <value>
                    <fullName>Series 6</fullName>
                </value>
                <value>
                    <fullName>Series 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuperMasterID__c</fullName>
        <externalId>true</externalId>
        <label>(Super) Master ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerminatedDate__c</fullName>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Top1ProductName__c</fullName>
        <label>Top Seller 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top1ProductPercent__c</fullName>
        <label>Top Seller 1 %</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Top1ProductSales__c</fullName>
        <label>Top Seller 1 $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Top2ProductName__c</fullName>
        <label>Top Seller 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top2ProductPercent__c</fullName>
        <label>Top Seller 2 %</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Top2ProductSales__c</fullName>
        <label>Top Seller 2 $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Top3ProductName__c</fullName>
        <label>Top Seller 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top3ProductPercent__c</fullName>
        <label>Top Seller 3 %</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Top3ProductSales__c</fullName>
        <label>Top Seller 3 $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TopLevelAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Level Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reports To Top Level Account</relationshipLabel>
        <relationshipName>ReportsToTopLevelAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Annuity_Carriers__c</fullName>
        <label>Top Annuity Carriers</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Top_Level_Account_Text1__c</fullName>
        <label>Top Level Account (Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_FIA_Production__c</fullName>
        <label>Total FIA Production</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; $1M</fullName>
                </value>
                <value>
                    <fullName>$1M - $3M</fullName>
                </value>
                <value>
                    <fullName>$3M - $5M</fullName>
                </value>
                <value>
                    <fullName>$5M - $8M</fullName>
                </value>
                <value>
                    <fullName>$8M - $10M</fullName>
                </value>
                <value>
                    <fullName>$10M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_1__c</fullName>
        <label>Website 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website_3__c</fullName>
        <label>Website 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>YTDAnnuity__c</fullName>
        <label>YTD Annuity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDIssuedPoliciesAnnuity__c</fullName>
        <label>YTD Annuity Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDIssuedPoliciesLife__c</fullName>
        <label>YTD Life Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDIssuedWrittenPoliciesAnnuity__c</fullName>
        <label>YTD Annuity Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDIssuedWrittenPoliciesLife__c</fullName>
        <label>YTD Life Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDLife__c</fullName>
        <label>YTD Life</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDTAPPoliciesAnnuity__c</fullName>
        <label>YTD Annuity TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDTAPPoliciesLife__c</fullName>
        <label>YTD Life TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDTAPWrittenPoliciesAnnuity__c</fullName>
        <label>YTD Annuity TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDTAPWrittenPoliciesLife__c</fullName>
        <label>YTD Life TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Fixed_Annuity__c</fullName>
        <label>YTD Fixed Annuity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Indexed_Annuity__c</fullName>
        <label>YTD Indexed Annuity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_SPIA__c</fullName>
        <label>YTD SPIA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts_Life</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <columns>TopLevelAccount__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>LastPolicyIssued__c</columns>
        <columns>YTDLife__c</columns>
        <columns>ProjectedLife__c</columns>
        <columns>PriorYearLife__c</columns>
        <columns>Last3IndexedUL__c</columns>
        <columns>Last12IndexedUL__c</columns>
        <columns>Prior12IndexedUL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>YTDLife__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PriorYearLife__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Prior12IndexedUL__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Accounts - Life View</label>
    </listViews>
    <listViews>
        <fullName>Annuity_Power_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>YTDLife__c</columns>
        <columns>ProjectedLife__c</columns>
        <columns>PriorYearLife__c</columns>
        <columns>Last3TotalLife__c</columns>
        <columns>Top1ProductName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Annuity_Power_Partner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Annuity Power Partners</label>
    </listViews>
    <listViews>
        <fullName>Christenson_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Last3TotalAnnuity__c</columns>
        <columns>Top1ProductName__c</columns>
        <columns>YTDAnnuity__c</columns>
        <columns>ProjectedAnnuity__c</columns>
        <columns>PriorYearAnnuity__c</columns>
        <columns>Last12TotalAnnuity__c</columns>
        <columns>Prior12TotalAnnuity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>National_Account_VP__c</field>
            <operation>includes</operation>
            <value>Christenson</value>
        </filters>
        <label>Christenson Accounts</label>
    </listViews>
</CustomObject>